Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24593

Signal 11 when group by primary key of table joined to information_schema.columns

    XMLWordPrintable

Details

    Description

      Get signal 11, Error Code: 2013. Lost connection to MySQL server during query when do the following. This does not happen on 10.3.17 nor on 10.3.23. This only errors if col_name is the primary key in the example below.

      To reproduce do the following:
      create table test_crash(col_name varchar(64), primary key (col_name)); #only fails if col_name is a primary key

      #fails on .27, works on .17 and .23
      select d.col_name
      from information_schema.columns i
      inner join test_crash d on d.col_name=i.column_name
      group by d.col_name;

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              pknz Peter
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.